--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,19 @@
 <%- include('partials/header'); %>
 <%- include('partials/navbar'); %>
 
-   
+   	<link rel="stylesheet" href="/index.css" />
+
    <div class="container">
 
   
 	 	
-		<div class="row mt-5 m-auto text-center" style="margin:0 auto;margin-top:40px" align="center">
-		
-		<a href="/create" class="col-md-4 m-1  btn  btn-primary">Create Book</a>
+		<div class="wrapper">
+		<div class="display">
+		<a id="btn" href="/create" class="col-md-4 m-1  btn  btn-primary">Create Book</a>
 	  	
-		<a href="/viewbooks" class="col-md-4 m-1 btn  btn-success">See Book</a>
-		
+		<a id="btn" href="/viewbooks" class="col-md-4 m-1 btn  btn-success">See Books</a>
+		</div>
+
 		</div>
 		
 
