--- a/views/notebooks.html
+++ b/views/notebooks.html
@@ -7,10 +7,18 @@
 	  <div class="container">
 	  	
 		  <div class="mt-5 m-0">
-		  <% for(var i=0; i<notebooks.length; i++){%>
+		
+
+		<% for(var i=0; i<notebooks.length; i++){%>
 		  	
-			 <div class="card card-body text-dark">
-				 <h2><%= notebooks[i][0] %></h2>
+		
+			
+		  	<div class="card card-body text-dark">
+				 <h2>
+					 <a href="viewnotes/<%= notebooks[i][2] %>" >
+					 	<%= notebooks[i][0] %>
+					 </a>
+				 </h2>
 				 <p class="mt-2">
 				 	<%= notebooks[i][1] %>
 				 </p>
